@@ -267,7 +267,7 @@ public abstract class NodeFailureMonitor {
 	
 	public static NodeFailureMonitor getDefaultFailureMonitor() {
 		try {
-			return (NodeFailureMonitor) Class.forName("jade.core.nodeMonitoring.BlockingNodeFailureMonitor").newInstance();
+			return (NodeFailureMonitor) Class.forName("jade.core.nodeMonitoring.BlockingNodeFailureMonitor").getDeclaredConstructor().newInstance();
 		}
 		catch (Throwable t) {
 			// Should never happen
